--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,6 +37,10 @@ sky:
     admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    # 用户端配置
+    user-secret-key: itheima
+    user-ttl: 720000000
+    user-token-name: authentication
 
   alioss:
     # 阿里云OSS配置
@@ -50,3 +54,8 @@ sky:
     port: ${sky.redis.port}
     password: ${sky.redis.password}
     database: ${sky.redis.database}
+
+  # 微信相关
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
